feat: worker status endpoint
